# lost-messages-chatbot

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  app.py  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  app.py  pyproject.toml  request.json
backend/app/: main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: chat.py
backend/app/routes/: chat.py
backend/app/services/: bot.py  redis.py
deployment/: docker-compose.yml  env.example
deployment/grafana/: datasources.yml
deployment/prometheus/: prometheus.yml
